# kafka-adapter

./: LICENSE  README.md  consumer.py  producer.py  pyproject.toml
kafka_adapter/consumer/: consumer.py  dataclass.py  message_event.py
kafka_adapter/producer/: producer.py
tests/: consumer.py  producer.py
